<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/mylayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="25dp"
            android:text="@string/title"
            android:textSize="40sp" />

        <com.edmodo.cropper.CropImageView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/CropImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            custom:imageResource="@drawable/butterfly" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <RelativeLayout
                android:id="@+id/fixedAspectRatioLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true" >

                <TextView
                    android:id="@+id/fixedAspectRatio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fixedAspectRatio"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />

                <ToggleButton
                    android:id="@+id/fixedAspectRatioToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/fixedAspectRatio"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/aspectRatioX"
                style="@style/RoboTheme"
                android:text="@string/aspectRatioX" />

            <SeekBar
                android:id="@+id/aspectRatioXSeek"
                style="@style/RoboTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="10" />

            <TextView
                android:id="@+id/aspectRatioY"
                style="@style/RoboTheme"
                android:text="@string/aspectRatioY" />

            <SeekBar
                android:id="@+id/aspectRatioYSeek"
                style="@style/RoboTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="10" />

            <RelativeLayout
                android:id="@+id/showGuidelinesLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:focusableInTouchMode="true" >

                <TextView
                    android:id="@+id/showGuidelines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/showGuidelines"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/showGuidelinesSpin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/showGuidelines"
                    android:entries="@array/showGuidelinesArray"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />
            </RelativeLayout>


            <Button
                android:id="@+id/Button_crop"
                style="@style/RoboTheme"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="#474747"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/crop"
                android:textColor="#33B5E5"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/croppedImageView"
                style="@style/RoboTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/croppedImageDesc"
                android:src="@drawable/butterfly" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>